--- a/lab3_web_security/answer-8.html
+++ b/lab3_web_security/answer-8.html
@@ -18,3 +18,12 @@
     })
 
 </script>
+
+<!-- CSRF is not stopped by Single Origin Policy. This is so as SOP is a protection mechanism for the browser. Both CORS and SOP only prevents a page
+     from rendering results from a server, and only a selective number of requests from the browser will undergo pre-flight requests where a request is 
+     rejected at the browser/client level. In our case, the request is being sent via a URL encoded form through the POST method. This will hence not 
+     require a pre-flight request, thus, the request is allowed to proceed. 
+     We do note however that the response will not be rendered due to the SOP, but still, the request has successfully reached the backend server
+     and applied. 
+    
+-->
