--- a/lab3_web_security/answer-8.html
+++ b/lab3_web_security/answer-8.html
@@ -24,6 +24,6 @@
      rejected at the browser/client level. In our case, the request is being sent via a URL encoded form through the POST method. This will hence not 
      require a pre-flight request, thus, the request is allowed to proceed. 
      We do note however that the response will not be rendered due to the SOP, but still, the request has successfully reached the backend server
-     and applied. 
+     and applied, thus making our attack effective and successful.
     
 -->
