fix: added onload, previously removed for testing

--- a/lab3_web_security/answer-8.html
+++ b/lab3_web_security/answer-8.html
@@ -9,7 +9,9 @@
 <script>
     //Submits the form
 
-    document.forms[0].submit()
+    window.onload = function(){
+        document.forms[0].submit()
+    }
 
     // Proceeds to redirect to sutd page
     var malIframe = document.getElementById("malicious-iframe")
